--- a/sentiment_task3.ipynb
+++ b/sentiment_task3.ipynb
@@ -14,7 +14,7 @@
    "source": [
     "Names & Sections\n",
     "----\n",
-    "Names: __YOUR NAMES HERE__ (Write these in every notebook you submit. For each partner, write down whether you are a 4120 or a 6120 student.)"
+    "Names: Julia Geller (4120) and Shae Marks (4120)"
    ]
   },
   {
@@ -31,22 +31,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\J-Dog\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "# https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "from collections import Counter\n",
     "import time\n",
-    "import sentiment_utils as sutils"
+    "import sentiment_utils as sutils\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,27 +70,27 @@
     "dev_tups = sutils.generate_tuples_from_file(DEV_FILE)\n",
     "\n",
     "# some variables you may want to use\n",
-    "# BINARIZED = True\n",
+    "BINARIZED = True\n",
     "# USE_COUNT_VECTORIZER = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write the functions needed (here or in sentiment_utils.py) to create vectorized BoW representations\n",
-    "# of your data. We recommend starting with a multinomial BoW representation.\n",
-    "# Each training example should be represented as a sparse vector.\n",
+    "# split the train and devlopment tuples into X and y\n",
+    "X_train = train_tups[0]\n",
+    "y_train = train_tups[1]\n",
     "\n",
-    "\n",
-    "\n"
+    "X_dev = dev_tups[0]\n",
+    "y_dev = dev_tups[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +99,9 @@
     "start = time.time()\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "\n",
+    "vocab = sutils.create_index(X_train)\n",
+    "X_train_vects = sutils.get_featurized('own', vocab, X_train, binary = False, verbose = False)\n",
+    "X_dev_vects = sutils.get_featurized('own', vocab, X_dev, binary = False, verbose = False)\n",
     "\n",
     "end = time.time()\n",
     "print(\"That took:\", end - start, \"seconds\")\n",
@@ -107,6 +119,11 @@
     "\n",
     "\n",
     "# YOUR CODE HERE\n",
+    "vocab = sutils.create_index(X_train)\n",
+    "X_train_flat = [' '.join(row) for row in X_train]\n",
+    "X_dev_flat = [' '.join(row) for row in X_dev]\n",
+    "X_train_CV = sutils.get_featurized('CV', vocab, X_train_flat, binary = False)\n",
+    "X_dev_CV = sutils.get_featurized('CV', vocab, X_dev_flat, binary = False)\n",
     "\n",
     "end = time.time()\n",
     "print(\"That took:\", end - start, \"seconds\")"
@@ -116,8 +133,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. How big is your vocabulary using your vectorization function(s)? __YOUR ANSWER HERE__\n",
-    "2. How big is your vocabulary using the `CountVectorizer`? __YOUR ANSWER HERE__"
+    "1. How big is your vocabulary using your vectorization function(s)? The vocabulary using my vectorization function 30,705 words.\n",
+    "2. How big is your vocabulary using the `CountVectorizer`? The vocabulary using my vectorization function 30,705 words."
    ]
   },
   {
@@ -127,11 +144,15 @@
    "outputs": [],
    "source": [
     "#  write any code you need analyze the relative sparsity of your vectorized representations of the data\n",
-    "\n",
     "# YOUR CODE HERE\n",
+    "def pct_zeros(X):\n",
+    "    cnt = [(x.shape[0]-np.count_nonzero(x))/x.shape[0] for x in X]\n",
+    "    return sum(cnt)/len(cnt)\n",
     "\n",
     "# Print out the average % of entries that are zeros in each vector in the vectorized training data\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "print('The average percent of entries that are zero in each vector for my vectorized training data:', pct_zeros(X_train_vects))\n",
+    "print('The average percent of entries that are zero in each vector for sklearn vectorized training data:', pct_zeros(X_train_CV))"
    ]
   },
   {
@@ -254,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
