--- a/sentiment_task015.ipynb
+++ b/sentiment_task015.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "Names & Sections\n",
     "----\n",
-    "Names: __YOUR NAMES HERE__ (Write these in every notebook you submit. For each partner, write down whether you are a 4120 or a 6120 student.)\n"
+    "Names:  Julia Geller (4120) and Shae Marks (4120)\n"
    ]
   },
   {
@@ -101,13 +101,39 @@
     "This is about the __provided__ movie review data set.\n",
     "\n",
     "1. Where did you get the data from? The provided dataset(s) were sub-sampled from https://www.kaggle.com/datasets/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews \n",
+    "\n",
     "2. (1 pt) How was the data collected (where did the people acquiring the data get it from and how)?\n",
+    "\n",
+    "The data is a collection of movie reviews from IMDB and were likely scraped from the site.\n",
+    "\n",
     "3. (2 pts) How large is the dataset (answer for both the train and the dev set, separately)? (# reviews, # tokens in both the train and dev sets)\n",
+    "\n",
+    "The train set is made up of 1600 reviews with a total of 369136 tokens in those reviews (splitting on white space). The dev set is made up of 200 reviews with a total of 47158 tokens in those reviews.\n",
+    "\n",
+    "\n",
     "4. (1 pt) What is your data? (i.e. newswire, tweets, books, blogs, etc)\n",
+    "\n",
+    "The data is highly polarized (distinctly negative or positive) movie reviews.\n",
+    "\n",
     "5. (1 pt) Who produced the data? (who were the authors of the text? Your answer might be a specific person or a particular group of people)\n",
+    "\n",
+    "The authors of the reviews are a collection of IMDB users who have watched various movies. \n",
+    "\n",
+    "The dataset was published on Kaggle by user LAKSHMIPATHI N. The description on Kaggle links to a web page telling users to contact Andrew Maas for questions about this dataset. The web page belongs to Andrew Maas' Stanford website, so Andrew is likely a collector of this IMDB data.\n",
+    "\n",
     "6. (2 pts) What is the distribution of labels in the data (answer for both the train and the dev set, separately)?\n",
+    "\n",
+    "The classes in the data are 0 and 1 (negative and positive, respectively). The training set has 796 reviews in class 0 and 804 reviews in class 1. The dev set has 95 reviews in class 0 and 105 reviews in class 1.\n",
+    "\n",
+    "\n",
     "7. (2 pts) How large is the vocabulary (answer for both the train and the dev set, separately)?\n",
-    "8. (1 pt) How big is the overlap between the vocabulary for the train and dev set?"
+    "\n",
+    "The training set has a vocab size of 47638, and the dev set has a vocab size of 11709. This was calculated by splitting the reviews by whitespace and taking the set of all tokens.\n",
+    "\n",
+    "\n",
+    "8. (1 pt) How big is the overlap between the vocabulary for the train and dev set?\n",
+    "\n",
+    "The train and dev vocabs have an overlap of 7245 tokens."
    ]
   },
   {
@@ -118,17 +144,136 @@
    "source": [
     "# our utility functions\n",
     "# RESTART your jupyter notebook kernel if you make changes to this file\n",
-    "import sentiment_utils as sutils\n",
-    "\n"
+    "import sentiment_utils as sutils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample of training rows to check shape of dataframe:\n",
+      "          id                                             review  label\n",
+      "0  ID-38024  Van Dien must cringe with embarrassment at the...      0\n",
+      "1  ID-35229  Its spelled S-L-A-S-H-E-R-S. I was happy when ...      0\n",
+      "2  ID-27745  My jaw fell so many times watching this flick,...      0\n",
+      "3  ID-39938  The belief in the Big Other as an invisible po...      1\n",
+      "4   ID-8880  INSPECTOR GADGET (1999) **Starring: Matthew Br...      0 \n",
+      "\n",
+      "Number of reviews in the training set: 1600\n",
+      "Number of tokens in training set: 369136 \n",
+      "\n",
+      "\n",
+      "Sample of dev rows to check shape of dataframe:\n",
+      "          id                                             review  label\n",
+      "0  ID-26193  The movie 'Gung Ho!': The Story of Carlson's M...      0\n",
+      "1  ID-14559  After 2 years of using this site for movie rev...      1\n",
+      "2  ID-11869  The only reason any of the hundred or so users...      0\n",
+      "3  ID-28502  Four stories about the drug trade in Europe be...      1\n",
+      "4  ID-34090  I give the show a six because of the fact that...      0 \n",
+      "\n",
+      "Number of reviews in the dev set: 200\n",
+      "Number of tokens in dev set: 47158\n"
+     ]
+    }
+   ],
    "source": [
-    "# Feel free to write code to help answer the above questions"
+    "# Feel free to write code to help answer the above questions\n",
+    "import pandas as pd\n",
+    "\n",
+    "# DETERMINING SIZE OF THE DATASET \n",
+    "TRAIN_FILE = \"movie_reviews_train.txt\"\n",
+    "DEV_FILE = \"movie_reviews_dev.txt\"\n",
+    "\n",
+    "\n",
+    "# TRAIN \n",
+    "train_df = pd.read_csv(TRAIN_FILE, delimiter=\"\\t\", header=None, names=[\"id\", \"review\", \"label\"])\n",
+    "print('Sample of training rows to check shape of dataframe:\\n', train_df.head(5), \"\\n\")\n",
+    "print('Number of reviews in the training set:', train_df.shape[0])\n",
+    "\n",
+    "train_tokens = []\n",
+    "for review in train_df[\"review\"]:\n",
+    "    train_tokens += review.split()\n",
+    "print('Number of tokens in training set:', len(train_tokens), \"\\n\\n\")\n",
+    "\n",
+    "\n",
+    "# DEV\n",
+    "dev_df = pd.read_csv(DEV_FILE, delimiter=\"\\t\", header=None, names=[\"id\", \"review\", \"label\"])\n",
+    "print('Sample of dev rows to check shape of dataframe:\\n', dev_df.head(5), \"\\n\")\n",
+    "print('Number of reviews in the dev set:', dev_df.shape[0])\n",
+    "\n",
+    "dev_tokens = []\n",
+    "for review in dev_df[\"review\"]:\n",
+    "    dev_tokens += review.split()\n",
+    "print('Number of tokens in dev set:', len(dev_tokens))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique label values in training data: {0, 1}\n",
+      "Number of reviews with 0 class in training set: 796\n",
+      "Number of reviews with 1 class in training set: 804\n",
+      "\n",
+      "Unique label values in dev data: {0, 1}\n",
+      "Number of reviews with 0 class in dev set: 95\n",
+      "Number of reviews with 1 class in dev set: 105\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DETERMINING DISTRIBUTION OF LABELS \n",
+    "\n",
+    "# TRAIN\n",
+    "print('Unique label values in training data:', set(train_df['label'].values))\n",
+    "print('Number of reviews with 0 class in training set:', train_df[train_df['label']==0].shape[0])\n",
+    "print('Number of reviews with 1 class in training set:', train_df[train_df['label']==1].shape[0])\n",
+    "print()\n",
+    "\n",
+    "# DEV\n",
+    "print('Unique label values in dev data:', set(dev_df['label'].values))\n",
+    "print('Number of reviews with 0 class in dev set:', dev_df[dev_df['label']==0].shape[0])\n",
+    "print('Number of reviews with 1 class in dev set:', dev_df[dev_df['label']==1].shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of training vocab: 47638\n",
+      "Size of dev vocab: 11709\n",
+      "Size of vocab overlap: 7245\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DETERMINING SIZE OF VOCAB \n",
+    "\n",
+    "# TRAIN\n",
+    "train_vocab = set(train_tokens)\n",
+    "print(\"Size of training vocab:\", len(train_vocab))\n",
+    "\n",
+    "# DEV \n",
+    "dev_vocab = set(dev_tokens)\n",
+    "print(\"Size of dev vocab:\", len(dev_vocab))\n",
+    "\n",
+    "# OVERLAP\n",
+    "print(\"Size of vocab overlap:\", len(set.intersection(train_vocab, dev_vocab)))"
    ]
   },
   {
@@ -203,7 +348,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -217,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
