Modifications to sutils

--- a/sentiment_task3.ipynb
+++ b/sentiment_task3.ipynb
@@ -39,7 +39,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\J-Dog\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\shaem\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
@@ -92,7 +92,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That took: 6.692219257354736 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# how much time does it take to featurize the all data with your implementation?\n",
     "\n",
@@ -100,8 +108,8 @@
     "\n",
     "# YOUR CODE HERE\n",
     "vocab = sutils.create_index(X_train)\n",
-    "X_train_vects = sutils.get_featurized('own', vocab, X_train, binary = False, verbose = False)\n",
-    "X_dev_vects = sutils.get_featurized('own', vocab, X_dev, binary = False, verbose = False)\n",
+    "X_train_vects = sutils.featurize('own', vocab, X_train, binary = False, verbose = False)\n",
+    "X_dev_vects = sutils.featurize('own', vocab, X_dev, binary = False, verbose = False)\n",
     "\n",
     "end = time.time()\n",
     "print(\"That took:\", end - start, \"seconds\")\n",
@@ -110,9 +118,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\shaem\\anaconda3\\Lib\\site-packages\\sklearn\\feature_extraction\\text.py:1375: UserWarning: Upper case characters found in vocabulary while 'lowercase' is True. These entries will not be matched with any documents\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That took: 1.4688332080841064 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# how much time does it take to featurize the all data with sklearn's CountVectorizer?\n",
     "start = time.time()\n",
@@ -122,8 +146,8 @@
     "vocab = sutils.create_index(X_train)\n",
     "X_train_flat = [' '.join(row) for row in X_train]\n",
     "X_dev_flat = [' '.join(row) for row in X_dev]\n",
-    "X_train_CV = sutils.get_featurized('CV', vocab, X_train_flat, binary = False)\n",
-    "X_dev_CV = sutils.get_featurized('CV', vocab, X_dev_flat, binary = False)\n",
+    "X_train_CV = sutils.featurize('CV', vocab, X_train_flat, binary = False)\n",
+    "X_dev_CV = sutils.featurize('CV', vocab, X_dev_flat, binary = False)\n",
     "\n",
     "end = time.time()\n",
     "print(\"That took:\", end - start, \"seconds\")"
@@ -139,9 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average percent of entries that are zero in each vector for my vectorized training data: 0.995092452369321\n",
+      "The average percent of entries that are zero in each vector for sklearn vectorized training data: 0.9957819369809477\n"
+     ]
+    }
+   ],
    "source": [
     "#  write any code you need analyze the relative sparsity of your vectorized representations of the data\n",
     "# YOUR CODE HERE\n",
@@ -151,8 +184,8 @@
     "\n",
     "# Print out the average % of entries that are zeros in each vector in the vectorized training data\n",
     "# YOUR CODE HERE\n",
-    "print('The average percent of entries that are zero in each vector for my vectorized training data:', pct_zeros(X_train_vects))\n",
-    "print('The average percent of entries that are zero in each vector for sklearn vectorized training data:', pct_zeros(X_train_CV))"
+    "print('The average percent of entries that are zero in each vector for my vectorized training data:', sutils.percent_zeros(X_train_vects))\n",
+    "print('The average percent of entries that are zero in each vector for sklearn vectorized training data:', sutils.percent_zeros(X_train_CV))"
    ]
   },
   {
@@ -275,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
