Implement Naive Bayes

--- a/sentiment_task2.ipynb
+++ b/sentiment_task2.ipynb
@@ -14,7 +14,7 @@
    "source": [
     "Names & Sections\n",
     "----\n",
-    "Names: __YOUR NAMES HERE__ (Write these in every notebook you submit. For each partner, write down whether you are a 4120 or a 6120 student.)"
+    "Names: Julia Geller (4120) and Shae Marks (4120)"
    ]
   },
   {
@@ -30,9 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\shaem\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "# our utility functions\n",
     "# RESTART your jupyter notebook kernel if you make changes to this file\n",
@@ -55,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,20 +76,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First part of tuple is an array of tokenized reviews (represented as arrays of tokens)\n",
+      "Second part of tuple is an array of labels for the reviews\n",
+      "['Van', 'Dien', 'must', 'cringe', 'with', 'embarrassment', 'at', 'the', 'memory', 'of'] 0\n"
+     ]
+    }
+   ],
    "source": [
     "# load in your data and make sure you understand the format\n",
     "# Do not print out too much so as to impede readability of your notebook\n",
     "train_tups = sutils.generate_tuples_from_file(TRAIN_FILE)\n",
     "dev_tups = sutils.generate_tuples_from_file(DEV_FILE)\n",
-    "\n"
+    "\n",
+    "X_train, y_train = train_tups\n",
+    "X_dev, y_dev = dev_tups\n",
+    "\n",
+    "print(\"First part of tuple is an array of tokenized reviews (represented as arrays of tokens)\")\n",
+    "print(\"Second part of tuple is an array of labels for the reviews\")\n",
+    "print(X_train[0][:10], y_train[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,19 +118,116 @@
     "# need to return a dict to work with the NLTK classifier\n",
     "# Possible problem for students: evaluate the difference \n",
     "# between using binarized features and using counts (non binarized features)\n",
-    "def word_feats(PARAMETERS ARE UP TO YOU) -> dict:    \n",
+    "def word_feats(doc_words: list, vocab: list, binary: bool = False, verbose: bool = False) -> dict:   \n",
+    "    \"\"\"\n",
+    "    Create BoW representations of the given data to be used by NLTK's NaiveBayesClassifier.\n",
+    "    Args:\n",
+    "        doc_words: list of words from a tokenized data sample \n",
+    "        vocab: a list of words in the vocabulary\n",
+    "        binary: whether or not to use binary features\n",
+    "        verbose: whether or not to print additional information about the data being processed \n",
+    "    Returns:\n",
+    "        a dictionary representing the words present in both the vocab and doc_words \n",
+    "        - for binary representations, in the format {word1: True, word2: True, ...}\n",
+    "        - for multinomial representations, in the format {word1: count1, word2: count2, ...}\n",
+    "    \"\"\" \n",
     "    # STUDENTS IMPLEMENT\n",
-    "    pass         \n",
+    "    doc_counter = Counter(doc_words)\n",
     "\n",
+    "    # for efficiency, only iterate through words that we know are both in the vocab and in doc_words \n",
+    "    overlap = set.intersection(set(doc_counter.keys()), set(vocab))\n",
     "\n",
+    "    # initialize empty dictionary of features \n",
+    "    bow_feats = {}\n",
+    "    for word in overlap:\n",
+    "        if binary:\n",
+    "            bow_feats[word] = True\n",
+    "        else:\n",
+    "            bow_feats[word] = doc_counter[word]\n",
+    "\n",
+    "    if verbose:\n",
+    "        print(\"Size of doc_words data:\", len(doc_words))\n",
+    "        print(\"Size of vocab:\", len(vocab))\n",
+    "        print(\"Size of overlap between doc_words and vocab:\", len(overlap))\n",
+    "        print(\"Feature examples:\", list(bow_feats.items())[:3])\n",
+    "        print()\n",
+    "           \n",
+    "    return bow_feats "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of doc_words data: 138\n",
+      "Size of vocab: 30705\n",
+      "Size of overlap between doc_words and vocab: 87\n",
+      "Feature examples: [('!', True), ('propaganda', True), ('value', True)]\n",
+      "\n",
+      "Binary:\n",
+      "Predicted: 0  True: 0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "# set up & train a sentiment classifier using NLTK's NaiveBayesClassifier and\n",
     "# classify the first example in the dev set as an example\n",
     "# make sure your output is well-labeled\n",
     "# Should take < 10 sec to train (on Felix's computer this takes 0.5 sec)\n",
     "\n",
+    "# test to make sure that you can train the classifier and use it to classify a new example\n",
+    "vocab = sutils.create_index(X_train)\n",
     "\n",
+    "# Training a classifier using binary features and predicting the label of the first dev example \n",
+    "binary_train_data = []\n",
+    "for i in range(len(X_train)):\n",
+    "    binary_train_data.append((word_feats(X_train[i], vocab, binary=True), y_train[i]))\n",
     "\n",
-    "# test to make sure that you can train the classifier and use it to classify a new example\n"
+    "binary_classifier = NaiveBayesClassifier.train(binary_train_data)\n",
+    "\n",
+    "binary_dev_data = word_feats(X_dev[0], vocab, binary=True, verbose=True)\n",
+    "prediction = binary_classifier.classify(binary_dev_data)\n",
+    "print(\"Binary:\")\n",
+    "print(\"Predicted:\", prediction, \" True:\", y_dev[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of doc_words data: 138\n",
+      "Size of vocab: 30705\n",
+      "Size of overlap between doc_words and vocab: 87\n",
+      "Feature examples: [('!', 1), ('propaganda', 3), ('value', 1)]\n",
+      "\n",
+      "Multinomial:\n",
+      "Predicted: 0  True: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Training a classifier using multinomial features and predicting the label of the first dev example \n",
+    "multi_train_data = []\n",
+    "for i in range(len(X_train)):\n",
+    "    multi_train_data.append((word_feats(X_train[i], vocab, binary=False), y_train[i]))\n",
+    "\n",
+    "multi_classifier = NaiveBayesClassifier.train(multi_train_data)\n",
+    "\n",
+    "multi_dev_data = word_feats(X_dev[0], vocab, binary=False, verbose=True)\n",
+    "prediction = multi_classifier.classify(multi_dev_data)\n",
+    "print(\"Multinomial:\")\n",
+    "print(\"Predicted:\", prediction, \" True:\", y_dev[0])"
    ]
   },
   {
