Use provided method to tokenize instead of just splitting on whitespace

--- a/sentiment_task015.ipynb
+++ b/sentiment_task015.ipynb
@@ -100,7 +100,9 @@
    "source": [
     "This is about the __provided__ movie review data set.\n",
     "\n",
-    "1. Where did you get the data from? The provided dataset(s) were sub-sampled from https://www.kaggle.com/datasets/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews \n",
+    "1. Where did you get the data from?\n",
+    "\n",
+    " The provided dataset(s) were sub-sampled from https://www.kaggle.com/datasets/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews \n",
     "\n",
     "2. (1 pt) How was the data collected (where did the people acquiring the data get it from and how)?\n",
     "\n",
@@ -108,7 +110,7 @@
     "\n",
     "3. (2 pts) How large is the dataset (answer for both the train and the dev set, separately)? (# reviews, # tokens in both the train and dev sets)\n",
     "\n",
-    "The train set is made up of 1600 reviews with a total of 369136 tokens in those reviews (splitting on white space). The dev set is made up of 200 reviews with a total of 47158 tokens in those reviews.\n",
+    "The train set is made up of 1600 reviews with a total of 425421 tokens in those reviews (Using the  provided generate_tuples_from_file method). The dev set is made up of 200 reviews with a total of 54603 tokens in those reviews.\n",
     "\n",
     "\n",
     "4. (1 pt) What is your data? (i.e. newswire, tweets, books, blogs, etc)\n",
@@ -128,23 +130,13 @@
     "\n",
     "7. (2 pts) How large is the vocabulary (answer for both the train and the dev set, separately)?\n",
     "\n",
-    "The training set has a vocab size of 47638, and the dev set has a vocab size of 11709. This was calculated by splitting the reviews by whitespace and taking the set of all tokens.\n",
+    "\n",
+    "We used the provided generate_tuples_from_file function to tokenize the reviews and took the set of those tokens to get the vocab size. The training set has a vocab size of 30705, and the dev set has a vocab size of 8953.\n",
     "\n",
     "\n",
     "8. (1 pt) How big is the overlap between the vocabulary for the train and dev set?\n",
     "\n",
-    "The train and dev vocabs have an overlap of 7245 tokens."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# our utility functions\n",
-    "# RESTART your jupyter notebook kernel if you make changes to this file\n",
-    "import sentiment_utils as sutils"
+    "The train and dev vocabs have an overlap of 6574 tokens."
    ]
   },
   {
@@ -153,68 +145,84 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\shaem\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# our utility functions\n",
+    "# RESTART your jupyter notebook kernel if you make changes to this file\n",
+    "import sentiment_utils as sutils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample of training rows to check shape of dataframe:\n",
-      "          id                                             review  label\n",
-      "0  ID-38024  Van Dien must cringe with embarrassment at the...      0\n",
-      "1  ID-35229  Its spelled S-L-A-S-H-E-R-S. I was happy when ...      0\n",
-      "2  ID-27745  My jaw fell so many times watching this flick,...      0\n",
-      "3  ID-39938  The belief in the Big Other as an invisible po...      1\n",
-      "4   ID-8880  INSPECTOR GADGET (1999) **Starring: Matthew Br...      0 \n",
-      "\n",
+      "X_train example: ['Van', 'Dien', 'must', 'cringe', 'with', 'embarrassment', 'at', 'the', 'memory', 'of', 'this', 'ludicrously', 'poor', 'film', ',', 'as', 'indeed', 'must', 'every', 'single', 'individual', 'involved', '.', 'To', 'be', 'honest', 'I', 'am', 'rather', 'embarrassed', 'to', 'admit', 'I', 'watched', 'it', 'from', 'start', 'to', 'finish', '.', 'Production', 'values', 'are', 'somewhere', 'between', 'the', 'original', 'series', 'of', \"'Crossroads\", \"'\", 'and', \"'Prisoner\", 'Cell', 'Block', 'H', \"'\", '.', 'Most', 'five', 'year', 'olds', 'would', 'be', 'able', 'to', 'come', 'up', 'with', 'more', 'realistic', 'dialogue', 'and', 'a', 'more', 'plausible', 'plot', '.', 'As', 'for', 'the', 'acting', 'performances', ',', 'if', 'you', 'can', 'imagine', 'the', 'most', 'rubbish', 'porno', 'you', 'have', 'ever', 'seen', '-', 'one', 'of', 'those', 'ones', 'where', 'the', 'action', 'is', 'padded', 'out', 'with', 'some', 'interminable', \"'story\", \"'\", 'to', 'explain', 'how', 'some', 'pouting', 'old', 'peroxide', 'blonde', 'boiler', 'has', 'come', 'to', 'be', 'getting', 'spit-roasted', 'by', 'a', 'couple', 'of', 'blokes', 'with', 'moustaches', '-', 'you', 'will', 'have', 'some', 'idea', 'of', 'the', 'standard', 'of', 'acting', 'in', \"'Maiden\", 'Voyage', \"'\", '.', 'Worse', 'still', ',', 'you', 'ca', \"n't\", 'even', 'fast', 'forward', 'to', 'the', 'sex', 'scenes', ',', 'because', 'there', 'are', \"n't\", 'any', '.', 'An', 'appallingly', 'dreadful', 'film', '.']\n",
+      "y_train example: 0\n",
       "Number of reviews in the training set: 1600\n",
-      "Number of tokens in training set: 369136 \n",
+      "Number of tokens in training set: 425421 \n",
       "\n",
       "\n",
-      "Sample of dev rows to check shape of dataframe:\n",
-      "          id                                             review  label\n",
-      "0  ID-26193  The movie 'Gung Ho!': The Story of Carlson's M...      0\n",
-      "1  ID-14559  After 2 years of using this site for movie rev...      1\n",
-      "2  ID-11869  The only reason any of the hundred or so users...      0\n",
-      "3  ID-28502  Four stories about the drug trade in Europe be...      1\n",
-      "4  ID-34090  I give the show a six because of the fact that...      0 \n",
-      "\n",
+      "X_dev example: ['The', 'movie', \"'Gung\", 'Ho', '!', \"'\", ':', 'The', 'Story', 'of', 'Carlson', \"'s\", 'Makin', 'Island', 'Raiders', 'was', 'made', 'in', '1943', 'with', 'a', 'view', 'to', 'go', 'up', 'the', 'moral', 'of', 'American', 'people', 'at', 'the', 'duration', 'of', 'second', 'world', 'war', '.', 'It', 'shows', 'with', 'the', 'better', 'way', 'that', 'the', 'cinema', 'can', 'constitute', 'body', 'of', 'propaganda', '.', 'The', 'value', 'of', 'this', 'film', 'is', 'only', 'collection', 'and', 'no', 'artistic', '.', 'In', 'a', 'film', 'of', 'propaganda', 'it', 'is', 'useless', 'to', 'judge', 'direction', 'and', 'actors', '.', 'Watch', 'that', 'movie', 'if', 'you', 'are', 'interested', 'to', 'learn', 'how', 'propaganda', 'functions', 'in', 'the', 'movies', 'or', 'if', 'you', 'are', 'a', 'big', 'fun', 'of', 'Robert', 'Mitchum', 'who', 'has', 'a', 'small', 'role', 'in', 'the', 'film', '.', 'If', 'you', 'want', 'to', 'see', 'a', 'film', 'for', 'the', 'second', 'world', 'war', ',', 'they', 'exist', 'much', 'better', 'and', 'objective', '.', 'I', 'rated', 'it', '4/10', '.']\n",
+      "y_dev example: 0\n",
       "Number of reviews in the dev set: 200\n",
-      "Number of tokens in dev set: 47158\n"
+      "Number of tokens in dev set: 54603 \n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# Feel free to write code to help answer the above questions\n",
-    "import pandas as pd\n",
+    "from collections import Counter\n",
     "\n",
     "# DETERMINING SIZE OF THE DATASET \n",
     "TRAIN_FILE = \"movie_reviews_train.txt\"\n",
     "DEV_FILE = \"movie_reviews_dev.txt\"\n",
     "\n",
+    "train_tups = sutils.generate_tuples_from_file(TRAIN_FILE)\n",
+    "dev_tups = sutils.generate_tuples_from_file(DEV_FILE)\n",
+    "\n",
+    "X_train, y_train = train_tups\n",
+    "X_dev, y_dev = dev_tups\n",
     "\n",
     "# TRAIN \n",
-    "train_df = pd.read_csv(TRAIN_FILE, delimiter=\"\\t\", header=None, names=[\"id\", \"review\", \"label\"])\n",
-    "print('Sample of training rows to check shape of dataframe:\\n', train_df.head(5), \"\\n\")\n",
-    "print('Number of reviews in the training set:', train_df.shape[0])\n",
+    "print(\"X_train example:\", X_train[0])\n",
+    "print(\"y_train example:\", y_train[0])\n",
+    "print('Number of reviews in the training set:', len(X_train))\n",
+    "assert len(X_train) == len(y_train)\n",
     "\n",
-    "train_tokens = []\n",
-    "for review in train_df[\"review\"]:\n",
-    "    train_tokens += review.split()\n",
+    "# flatten list of list \n",
+    "train_tokens = list(sum(X_train,[]))\n",
     "print('Number of tokens in training set:', len(train_tokens), \"\\n\\n\")\n",
     "\n",
     "\n",
     "# DEV\n",
-    "dev_df = pd.read_csv(DEV_FILE, delimiter=\"\\t\", header=None, names=[\"id\", \"review\", \"label\"])\n",
-    "print('Sample of dev rows to check shape of dataframe:\\n', dev_df.head(5), \"\\n\")\n",
-    "print('Number of reviews in the dev set:', dev_df.shape[0])\n",
+    "print(\"X_dev example:\", X_dev[0])\n",
+    "print(\"y_dev example:\", y_dev[0])\n",
+    "print('Number of reviews in the dev set:', len(X_dev))\n",
+    "assert len(X_dev) == len(y_dev)\n",
     "\n",
-    "dev_tokens = []\n",
-    "for review in dev_df[\"review\"]:\n",
-    "    dev_tokens += review.split()\n",
-    "print('Number of tokens in dev set:', len(dev_tokens))"
+    "# flatten list of list \n",
+    "dev_tokens = list(sum(X_dev,[]))\n",
+    "print('Number of tokens in dev set:', len(dev_tokens), \"\\n\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -235,29 +243,33 @@
     "# DETERMINING DISTRIBUTION OF LABELS \n",
     "\n",
     "# TRAIN\n",
-    "print('Unique label values in training data:', set(train_df['label'].values))\n",
-    "print('Number of reviews with 0 class in training set:', train_df[train_df['label']==0].shape[0])\n",
-    "print('Number of reviews with 1 class in training set:', train_df[train_df['label']==1].shape[0])\n",
+    "print('Unique label values in training data:', set(y_train))\n",
+    "train_label_count = Counter(y_train)\n",
+    "print('Number of reviews with 0 class in training set:', train_label_count[0])\n",
+    "print('Number of reviews with 1 class in training set:', train_label_count[1])\n",
+    "assert train_label_count[0] +  train_label_count[1] == 1600\n",
     "print()\n",
     "\n",
     "# DEV\n",
-    "print('Unique label values in dev data:', set(dev_df['label'].values))\n",
-    "print('Number of reviews with 0 class in dev set:', dev_df[dev_df['label']==0].shape[0])\n",
-    "print('Number of reviews with 1 class in dev set:', dev_df[dev_df['label']==1].shape[0])"
+    "print('Unique label values in dev data:', set(y_dev))\n",
+    "dev_label_count = Counter(y_dev)\n",
+    "print('Number of reviews with 0 class in dev set:', dev_label_count[0])\n",
+    "print('Number of reviews with 1 class in dev set:', dev_label_count[1])\n",
+    "assert dev_label_count[0] +  dev_label_count[1] == 200"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of training vocab: 47638\n",
-      "Size of dev vocab: 11709\n",
-      "Size of vocab overlap: 7245\n"
+      "Size of training vocab: 30705\n",
+      "Size of dev vocab: 8953\n",
+      "Size of vocab overlap: 6574\n"
      ]
     }
    ],
@@ -267,6 +279,7 @@
     "# TRAIN\n",
     "train_vocab = set(train_tokens)\n",
     "print(\"Size of training vocab:\", len(train_vocab))\n",
+    "\n",
     "\n",
     "# DEV \n",
     "dev_vocab = set(dev_tokens)\n",
@@ -351,6 +364,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
