Minor changes (comments, spelling, graphing improvements)

--- a/sentiment_task2.ipynb
+++ b/sentiment_task2.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -170,8 +170,9 @@
       "Feature examples: [('!', True), ('propaganda', True), ('value', True)]\n",
       "\n",
       "Binary:\n",
-      "Predicted: 0  True: 0\n",
-      "\n"
+      "Sample Tokenized: ['The', 'movie', \"'Gung\", 'Ho', '!', \"'\", ':', 'The', 'Story', 'of', 'Carlson', \"'s\", 'Makin', 'Island', 'Raiders', 'was', 'made', 'in', '1943', 'with', 'a', 'view', 'to', 'go', 'up', 'the', 'moral', 'of', 'American', 'people', 'at', 'the', 'duration', 'of', 'second', 'world', 'war', '.', 'It', 'shows', 'with', 'the', 'better', 'way', 'that', 'the', 'cinema', 'can', 'constitute', 'body', 'of', 'propaganda', '.', 'The', 'value', 'of', 'this', 'film', 'is', 'only', 'collection', 'and', 'no', 'artistic', '.', 'In', 'a', 'film', 'of', 'propaganda', 'it', 'is', 'useless', 'to', 'judge', 'direction', 'and', 'actors', '.', 'Watch', 'that', 'movie', 'if', 'you', 'are', 'interested', 'to', 'learn', 'how', 'propaganda', 'functions', 'in', 'the', 'movies', 'or', 'if', 'you', 'are', 'a', 'big', 'fun', 'of', 'Robert', 'Mitchum', 'who', 'has', 'a', 'small', 'role', 'in', 'the', 'film', '.', 'If', 'you', 'want', 'to', 'see', 'a', 'film', 'for', 'the', 'second', 'world', 'war', ',', 'they', 'exist', 'much', 'better', 'and', 'objective', '.', 'I', 'rated', 'it', '4/10', '.']\n",
+      "Sample: The movie 'Gung Ho ! ' : The Story of Carlson 's Makin Island Raiders was made in 1943 with a view to go up the moral of American people at the duration of second world war . It shows with the better way that the cinema can constitute body of propaganda . The value of this film is only collection and no artistic . In a film of propaganda it is useless to judge direction and actors . Watch that movie if you are interested to learn how propaganda functions in the movies or if you are a big fun of Robert Mitchum who has a small role in the film . If you want to see a film for the second world war , they exist much better and objective . I rated it 4/10 .\n",
+      "Predicted Label: 0  True Label: 0\n"
      ]
     }
    ],
@@ -185,21 +186,26 @@
     "vocab = sutils.create_index(X_train)\n",
     "\n",
     "# Training a classifier using binary features and predicting the label of the first dev example \n",
-    "binary_train_data = []\n",
+    "# binary_train_data in the form: [({word1: True, word2: True, ...}, 0), ...]\n",
+    "binary_train_data = [] \n",
     "for i in range(len(X_train)):\n",
-    "    binary_train_data.append((word_feats(X_train[i], vocab, binary=True), y_train[i]))\n",
+    "    featurized_sample = (word_feats(X_train[i], vocab, binary=True), y_train[i])\n",
+    "    binary_train_data.append(featurized_sample)\n",
     "\n",
     "binary_classifier = NaiveBayesClassifier.train(binary_train_data)\n",
     "\n",
-    "binary_dev_data = word_feats(X_dev[0], vocab, binary=True, verbose=True)\n",
+    "# testing on the first dev example - just take the feature dictionary {word1: True, word2: True, ...}\n",
+    "binary_dev_data = word_feats(X_dev[0], vocab, binary=True, verbose=True) # verbose = True to sanity check word_feats \n",
     "prediction = binary_classifier.classify(binary_dev_data)\n",
-    "print(\"Binary:\")\n",
-    "print(\"Predicted:\", prediction, \" True:\", y_dev[0])"
+    "print(\"BINARY\")\n",
+    "print(\"Sample Tokenized:\", X_dev[0])\n",
+    "print(\"Sample:\", \" \".join(X_dev[0]))\n",
+    "print(\"Predicted Label:\", prediction, \" True Label:\", y_dev[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -211,23 +217,32 @@
       "Size of overlap between doc_words and vocab: 87\n",
       "Feature examples: [('!', 1), ('propaganda', 3), ('value', 1)]\n",
       "\n",
-      "Multinomial:\n",
-      "Predicted: 0  True: 0\n"
+      "MULTINOMIAL\n",
+      "Sample Tokenized: ['The', 'movie', \"'Gung\", 'Ho', '!', \"'\", ':', 'The', 'Story', 'of', 'Carlson', \"'s\", 'Makin', 'Island', 'Raiders', 'was', 'made', 'in', '1943', 'with', 'a', 'view', 'to', 'go', 'up', 'the', 'moral', 'of', 'American', 'people', 'at', 'the', 'duration', 'of', 'second', 'world', 'war', '.', 'It', 'shows', 'with', 'the', 'better', 'way', 'that', 'the', 'cinema', 'can', 'constitute', 'body', 'of', 'propaganda', '.', 'The', 'value', 'of', 'this', 'film', 'is', 'only', 'collection', 'and', 'no', 'artistic', '.', 'In', 'a', 'film', 'of', 'propaganda', 'it', 'is', 'useless', 'to', 'judge', 'direction', 'and', 'actors', '.', 'Watch', 'that', 'movie', 'if', 'you', 'are', 'interested', 'to', 'learn', 'how', 'propaganda', 'functions', 'in', 'the', 'movies', 'or', 'if', 'you', 'are', 'a', 'big', 'fun', 'of', 'Robert', 'Mitchum', 'who', 'has', 'a', 'small', 'role', 'in', 'the', 'film', '.', 'If', 'you', 'want', 'to', 'see', 'a', 'film', 'for', 'the', 'second', 'world', 'war', ',', 'they', 'exist', 'much', 'better', 'and', 'objective', '.', 'I', 'rated', 'it', '4/10', '.']\n",
+      "Sample: The movie 'Gung Ho ! ' : The Story of Carlson 's Makin Island Raiders was made in 1943 with a view to go up the moral of American people at the duration of second world war . It shows with the better way that the cinema can constitute body of propaganda . The value of this film is only collection and no artistic . In a film of propaganda it is useless to judge direction and actors . Watch that movie if you are interested to learn how propaganda functions in the movies or if you are a big fun of Robert Mitchum who has a small role in the film . If you want to see a film for the second world war , they exist much better and objective . I rated it 4/10 .\n",
+      "Predicted Label: 0  True Label: 0\n"
      ]
     }
    ],
    "source": [
     "# Training a classifier using multinomial features and predicting the label of the first dev example \n",
+    "\n",
+    "# multi_train_data in the form: [({word1: count1, count2: True, ...}, 0), ...]\n",
     "multi_train_data = []\n",
     "for i in range(len(X_train)):\n",
-    "    multi_train_data.append((word_feats(X_train[i], vocab, binary=False), y_train[i]))\n",
+    "    featurized_sample = (word_feats(X_train[i], vocab, binary=False), y_train[i])\n",
+    "    multi_train_data.append(featurized_sample)\n",
     "\n",
     "multi_classifier = NaiveBayesClassifier.train(multi_train_data)\n",
     "\n",
-    "multi_dev_data = word_feats(X_dev[0], vocab, binary=False, verbose=True)\n",
+    "\n",
+    "# testing on the first dev example - just take the feature dictionary {word1: count1, word2: count2, ...}\n",
+    "multi_dev_data = word_feats(X_dev[0], vocab, binary=False, verbose=True) # verbose = True to sanity check word_feats \n",
     "prediction = multi_classifier.classify(multi_dev_data)\n",
-    "print(\"Multinomial:\")\n",
-    "print(\"Predicted:\", prediction, \" True:\", y_dev[0])"
+    "print(\"MULTINOMIAL\")\n",
+    "print(\"Sample Tokenized:\", X_dev[0])\n",
+    "print(\"Sample:\", \" \".join(X_dev[0]))\n",
+    "print(\"Predicted Label:\", prediction, \" True Label:\", y_dev[0])"
    ]
   },
   {
