--- a/sentiment_task3.ipynb
+++ b/sentiment_task3.ipynb
@@ -149,7 +149,7 @@
     "\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "# un-tokenize reviews (fit function in CountVectorizor expects data structure with a lower() method -- we'll let CV find the vocab itself)\n",
+    "# un-tokenize reviews (fit function in CountVectorizor expects data structure with a lower() method -- we'll let CV find the tokens and vocab itself)\n",
     "X_train_flat = [' '.join(row) for row in X_train]\n",
     "X_dev_flat = [' '.join(row) for row in X_dev]\n",
     "# get features for train and dev sets using Sk-learns CountVectorizer\n",
@@ -297,6 +297,7 @@
     "dev_preds = model.predict(X_dev_CV)\n",
     "metrics = sutils.get_prfa(y_dev, dev_preds)\n",
     "precision, recall, f1, accuracy = metrics\n",
+    "print(\"Scores for Multinomial CountVectorizer Data\")\n",
     "print('precision:', precision)\n",
     "print('recall:', recall)\n",
     "print('f1:', f1)\n",
@@ -314,13 +315,13 @@
     "model = LogisticRegression()\n",
     "train_feats = [(x, y) for x,y in zip(X_train_CV, y_train) ]\n",
     "dev_feats = [(x, y) for x,y in zip(X_dev_CV, y_dev) ]\n",
-    "sutils.create_training_graph(sutils.log_reg_metrics, train_feats, dev_feats, 'Logistic Regression', 'Logistic_Regression_CV_Multinomial_graph.png', True)\n",
+    "sutils.create_training_graph(sutils.log_reg_metrics, train_feats, dev_feats, 'CountVectorizer - Logistic Regression', 'Logistic_Regression_CV_Multinomial_graph.png', verbose=True)\n",
     "\n",
     "# graph for Multinomial, My Vectorizer\n",
     "model = LogisticRegression()\n",
     "train_feats = [(x, y) for x,y in zip(X_train_vects, y_train) ]\n",
     "dev_feats = [(x, y) for x,y in zip(X_dev_vects, y_dev) ]\n",
-    "sutils.create_training_graph(sutils.log_reg_metrics, train_feats, dev_feats, 'Logistic Regression', 'Logistic_Regression_My_Vectorizer_Multinomial_graph.png', True)"
+    "sutils.create_training_graph(sutils.log_reg_metrics, train_feats, dev_feats, 'My Vectorizer - Logistic Regression', 'Logistic_Regression_My_Vectorizer_Multinomial_graph.png', verbose=True)"
    ]
   },
   {
