--- a/sentiment_task2.ipynb
+++ b/sentiment_task2.ipynb
@@ -30,19 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\shaem\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# our utility functions\n",
     "# RESTART your jupyter notebook kernel if you make changes to this file\n",
@@ -65,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,12 +109,49 @@
     "# Possible problem for students: evaluate the difference \n",
     "# between using binarized features and using counts (non binarized features)\n",
     "\n",
-    "# NOTE: word_feats has been moved to the sutils file "
+    "\n",
+    "# NOTE: word_feats has been moved to the sutils file - copy and pasting it here for easier grading \n",
+    "\n",
+    "def word_feats(doc_words: list, vocab: list, binary: bool = False, verbose: bool = False) -> dict:   \n",
+    "    \"\"\"\n",
+    "    Create BoW representations of the given data to be used by NLTK's NaiveBayesClassifier.\n",
+    "    Args:\n",
+    "        doc_words: list of words from a tokenized data sample \n",
+    "        vocab: a list of words in the vocabulary\n",
+    "        binary: whether or not to use binary features\n",
+    "        verbose: whether or not to print additional information about the data being processed \n",
+    "    Returns:\n",
+    "        a dictionary representing the words present in both the vocab and doc_words \n",
+    "        - for binary representations, in the format {word1: True, word2: True, ...}\n",
+    "        - for multinomial representations, in the format {word1: count1, word2: count2, ...}\n",
+    "    \"\"\" \n",
+    "    # STUDENTS IMPLEMENT\n",
+    "    doc_counter = Counter(doc_words)\n",
+    "\n",
+    "    # for efficiency, only iterate through words that we know are both in the vocab and in doc_words \n",
+    "    overlap = set.intersection(set(doc_counter.keys()), set(vocab))\n",
+    "\n",
+    "    # initialize empty dictionary of features \n",
+    "    bow_feats = {}\n",
+    "    for word in overlap:\n",
+    "        if binary:\n",
+    "            bow_feats[word] = True\n",
+    "        else:\n",
+    "            bow_feats[word] = doc_counter[word]\n",
+    "\n",
+    "    if verbose:\n",
+    "        print(\"Size of doc_words data:\", len(doc_words))\n",
+    "        print(\"Size of vocab:\", len(vocab))\n",
+    "        print(\"Size of overlap between doc_words and vocab:\", len(overlap))\n",
+    "        print(\"Feature examples:\", list(bow_feats.items())[:3])\n",
+    "        print()\n",
+    "           \n",
+    "    return bow_feats "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -204,13 +231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "BINARY\n",
+      "precision: 0.8681318681318682\n",
+      "recall: 0.7523809523809524\n",
+      "f1: 0.8061224489795917\n",
+      "accuracy: 0.81\n",
+      "\n",
+      "MULTINOMIAL\n",
       "precision: 0.8850574712643678\n",
       "recall: 0.7333333333333333\n",
       "f1: 0.8020833333333334\n",
@@ -301,7 +335,18 @@
     "# you will be creating a similar graph for logistic regression and neural nets, so make sure\n",
     "# you use functions wisely so that you do not have excessive repeated code\n",
     "# write any helper functions you need in sentiment_utils.py (functions that you'll use in your other notebooks as well)\n",
+    "precision, recall, f1, accuracy = sutils.naive_bayes_metrics(X_train_feats_binary, y_train, X_dev_feats_binary, y_dev)\n",
+    "print(\"BINARY\")\n",
+    "print('precision:', precision)\n",
+    "print('recall:', recall)\n",
+    "print('f1:', f1)\n",
+    "print('accuracy:', accuracy)\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "\n",
     "precision, recall, f1, accuracy = sutils.naive_bayes_metrics(X_train_feats_multi, y_train, X_dev_feats_multi, y_dev)\n",
+    "print(\"MULTINOMIAL\")\n",
     "print('precision:', precision)\n",
     "print('recall:', recall)\n",
     "print('f1:', f1)\n",
@@ -340,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
